# IHaskell

./: ihaskell.cabal
.github/workflows/: haskell-ci.yml
ghc-parser/: ghc-parser.cabal
ihaskell-display/ihaskell-aeson/: ihaskell-aeson.cabal
ihaskell-display/ihaskell-blaze/: ihaskell-blaze.cabal
ihaskell-display/ihaskell-charts/: ihaskell-charts.cabal
ihaskell-display/ihaskell-diagrams/: ihaskell-diagrams.cabal
ihaskell-display/ihaskell-diagrams/IHaskell/Display/: Diagrams.hs
ihaskell-display/ihaskell-diagrams/IHaskell/Display/Diagrams/: Animation.hs
ihaskell-display/ihaskell-gnuplot/: ihaskell-gnuplot.cabal
ihaskell-display/ihaskell-graphviz/: ihaskell-graphviz.cabal
ihaskell-display/ihaskell-hatex/: ihaskell-hatex.cabal
ihaskell-display/ihaskell-hatex/IHaskell/Display/: Hatex.hs
ihaskell-display/ihaskell-juicypixels/: ihaskell-juicypixels.cabal
ihaskell-display/ihaskell-magic/: ihaskell-magic.cabal
ihaskell-display/ihaskell-plot/: ihaskell-plot.cabal
ihaskell-display/ihaskell-static-canvas/: ihaskell-static-canvas.cabal
ihaskell-display/ihaskell-widgets/: ihaskell-widgets.cabal
ihaskell-display/ihaskell-widgets/src/IHaskell/Display/Widgets/: Common.hs  Interactive.hs  Singletons.hs  Types.hs
ipython-kernel/: ipython-kernel.cabal
ipython-kernel/src/IHaskell/IPython/: Types.hs
