name:                ihaskell-hatex
version:             0.2.1.1
synopsis:            IHaskell display instances for hatex
-- description:
homepage:            http://www.github.com/gibiansky/IHaskell
license:             MIT
license-file:        LICENSE
author:              Adam Vogt
maintainer:          andrew.gibiansky@gmail.com
category:            Development
build-type:          Simple
cabal-version:       1.16
tested-with:         GHC == 8.4.4
                      || == 8.6.5
                      || == 8.8.4
                      || == 8.10.7
                      || == 9.0.2
                      || == 9.2.8
                      || == 9.4.8
                      || == 9.6.7
                      || == 9.8.4
                      || == 9.10.3
                      || == 9.12.2


library
  exposed-modules:     IHaskell.Display.Hatex
  build-depends:       base >=4.9 && <5,
                       text,
                       HaTeX >= 3.9,
                       ihaskell >= 0.5
  default-language:    Haskell2010

